Improve docker image using multistage and maintained base image and fix jre reflective warnings and fix logback